grammar.js
const WHITESPACE_CHAR =
      /[\f\n\r\t, \u000B\u001C\u001D\u001E\u001F\u2028\u2029\u1680\u2000\u2001\u2002\u2003\u2004\u2005\u2006\u2008\u2009\u200a\u205f\u3000]/;

const WHITESPACE =
      token(repeat1(WHITESPACE_CHAR));

const COMMENT =
    token(/#?;.*\n?/);

const NESTED_COMMENT =
    token(seq(/#\|.*\n/, repeat(choice(WHITESPACE, /./)), /\|#\n?/));

const DELIMITER =
    choice(WHITESPACE, '|', '(', ')', '"', ';')

const DIRECTIVE =
    token(seq(/#!/, repeat(/./), DELIMITER))

const OPEN_BRACKET =
    choice("(", "[", "{")

const CLOSE_BRACKET =
    choice(")", "]", "}")

const ANY_CHAR =
      /./;

const DIGIT =
      /[0-9]/;

const ALPHANUMERIC =
      /[0-9a-zA-Z]/;

const HEX_DIGIT =
      /[0-9a-fA-F]/;

const OCTAL_DIGIT =
      /[0-7]/;

const STRING =
      token(seq('"',
                repeat(/[^"\\]/),
                repeat(seq("\\",
                           /./,
                           repeat(/[^"\\]/))),
                '"'));

const OCTAL_CHAR =
      seq("o",
          choice(seq(DIGIT, DIGIT, DIGIT),
                 seq(DIGIT, DIGIT),
                 seq(DIGIT)));

const NAMED_CHAR =
      choice("alarm",
             "backspace",
             "delete",
             "escape",
             "newline",
             "null",
             "return",
             "space",
             "tab");

const CHARACTER =
      token(seq("#\\",
                choice(seq(/[xX]/, repeat1(HEX_DIGIT)),
                       NAMED_CHAR,
                       ANY_CHAR)));

module.exports = grammar({
    name: 'scheme',
    extras: $ =>
    [],
    conflicts: $ =>
    [],
    rules: {
        source: $ =>
            repeat(choice($._gap, $._form)),

        _gap: $ => choice($._ws, $.comment, $.nested_comment, $.directive),

        _ws: $ => WHITESPACE,

        comment: $ => COMMENT,
        
        nested_comment: $ => NESTED_COMMENT,

        directive: $ => DIRECTIVE,

        _form: $ =>
            choice(
                $.character,
                $.string,
                $.list),

        character: $ => CHARACTER,

        string: $ => STRING,

        list: $ => seq(OPEN_BRACKET, CLOSE_BRACKET)
    }
});
