corpus/lists.txt
=======
Lists 1
=======
()
---
(source
  (list))

=======
Lists 2
=======
("a string")

---

(source
  (list
    (string)))

=======
Lists 3
=======
(1)

---

(source
  (list
    (number)))

=======
Lists 4
=======
(1 2 3)

---

(source
  (list
    (number)
    (number)
    (number)))
